<resources>
    <string name="app_name">TruckerSoft</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="remember">Recordar</string>
    <string name="singin">Iniciar Sesión</string>
    <string name="singin_start">Entrar</string>
    <string name="user_register">Registrate</string>
    <string name="name">Nombre</string>
    <string name="Age">Edad</string>
    <string name="email">Email</string>
    <string name="phone">Teléfono</string>
    <string name="carnet">Carnet</string>
    <string name="username">Usuario</string>
    <string name="newpassword">Contraseña</string>
    <string name="new_password_repeat">Repetir Contraseña</string>
    <string name="register">Registrar</string>
    <string name="back">Regresar</string>
    <!--    MapBox Settings  -->
    <string name="access_token">pk.eyJ1Ijoicm9kcmlnb21hcGJveCIsImEiOiJjajEzMGkyazEwMHRqMzJwMTVjYjI5N2puIn0.K0Y5mPV4vWtHQMUOBmmA_g</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
